--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 Logo
 __pycache__
 test.py
-agroTechModel.h5
 IMG_20221026_115327.jpg
 *.env
 arched-flame-419814-420ebdd2cb2d.json
+agrotech-key.pem
+
